# AiAcademy

./: .gitignore  README.md  create_vectorstore.py  generic_flow.html  pyproject.toml  template.md
es2-evaluation/evaluation/: README.md  medical_analysis.txt  pyproject.toml
es2-evaluation/evaluation/src/evaluation/: main.py
es2-evaluation/evaluation/src/ragas/: pipeline.py
mainflow/: .gitignore  README.md  documentation.html  my_study_plan.md  paper_crew_result.md  pyproject.toml  streamlit_app.py
mainflow/.streamlit/: config.toml
mainflow/docs/: conf.py
mainflow/docs/_build/doctrees/: environment.pickle  index.doctree
mainflow/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
mainflow/docs/api/: index.rst
mainflow/docs/api/crews/: planner_crew.rst  study_plan_crew.rst
mainflow/docs/source/: conf.py  configuration.rst  documentation.rst  examples.rst  index.rst  installation.rst  quickstart.rst
mainflow/docs/source/api/: crews.rst  main.rst  tools.rst  utils.rst
mainflow/frontend/: FRONTEND_README.md  README.md  __init__.py
mainflow/frontend/styles/: main.css
mainflow/frontend/utils/: __init__.py  style_manager.py
mainflow/mlruns/.trash/293189534794950362/: meta.yaml
mainflow/mlruns/0/: meta.yaml
mainflow/mlruns/509180351258045446/: meta.yaml
mainflow/mlruns/509180351258045446/068b33dc844e4addace4c782466f5f1b/: meta.yaml
mainflow/mlruns/509180351258045446/0933fab2926847f2b7b1a5b0d35672d9/: meta.yaml
mainflow/mlruns/509180351258045446/15661a0808fd40628c08b4428ba0ca16/: meta.yaml
mainflow/mlruns/509180351258045446/2162ed714b7442aa929644efd6584b02/: meta.yaml
mainflow/mlruns/509180351258045446/2bc4c73c05c44e3682fd609d94f6ebd4/: meta.yaml
mainflow/mlruns/509180351258045446/344c7d3336a04211a76230dbcc2a8dac/: meta.yaml
mainflow/output/: final_study_plan.md
mainflow/src/: __init__.py
mainflow/src/components/: study_plan_generator.py
mainflow/src/mainflow/: main.py
mainflow/src/mainflow/tools/: arxiv_searcher_tool.py  custom_tool.py  (+1 more)
mainflow/tests/: monitoring.py  paper_crew_result.md
mainflow/tests/output/: final_study_plan.md
misc/es2-evaluation/evaluation/: DEEPEVAL_README.md  README.md  deepeval_config.py  medical_analysis.txt  pyproject.toml  test_deepeval.py
(+375 files in other folders)
