[project]
name = "esercizio_esteso"
version = "0.1.0"
description = "esercizio_esteso using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "faiss-cpu>=1.12.0",
]

[project.scripts]
kickoff = "esercizio_esteso.main:kickoff"
run_crew = "esercizio_esteso.main:kickoff"
plot = "esercizio_esteso.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
