[project]
name = "mainflow"
version = "0.1.0"
description = "mainflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "arxiv>=2.2.0",
    "crewai[tools]>=0.175.0,<1.0.0",
    "langchain-openai>=0.2.14",
    "mlflow>=2.16.0",
]

[project.scripts]
kickoff = "mainflow.main:kickoff"
run_crew = "mainflow.main:kickoff"
plot = "mainflow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
