[project]
name = "evaluation"
version = "0.1.0"
description = "evaluation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
]

[project.scripts]
kickoff = "evaluation.main:kickoff"
run_crew = "evaluation.main:kickoff"
plot = "evaluation.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
